# Rust-Filter-REST-API

./: .gitignore  Cargo.toml
migrations/2022-01-24-085923_create_users/: up.sql
src/: main.rs  schema.rs
