[package]
name = "rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
actix-rt = "2.6.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["postgres"] }
diesel_migrations = "1.4"
env_logger = "0.9.0"
lazy_static = "1.4"
listenfd = "0.5.0"
serde = "1.0"
serde_json = "1.0"
r2d2 = "0.8"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
schema = "0.0.1"
colored = "*"
paginate = "1.1.8"
diesel_filter = "0.1.2"
sql-builder = "3.1.1"